--- a/build.gradle
+++ b/build.gradle
@@ -5,17 +5,17 @@ buildscript {
             'androidXTestCore'       : '1.4.0',
             'androidXTestRules'      : '1.4.0',
             'assertJ'                : '3.16.1',
-            'compose'                : '1.2.1',
-            'composeCompiler'        : '1.3.1',
+            'compose'                : '1.5.0-alpha04',
+            'composeCompiler'        : '1.4.7',
             'composeActivity'        : '1.5.1',
             'composeConstraintLayout': '1.0.1',
             'composeNavigation'      : '2.5.1',
             'detekt'                 : '1.7.4',
             'espresso'               : '3.2.0',
-            'gradle'                 : '7.2.1',
+            'gradle'                 : '7.3.1',
             'junit'                  : '4.13.2',
             'junitImplementation'    : '1.1.2',
-            'kotlin'                 : '1.7.10',
+            'kotlin'                 : '1.8.21',
             'kotlinCompilerVersion'  : '1.7.0',
             'kotlinCompileTesting'   : '1.4.9',
             'kotlinPoet'             : '1.12.0',
